// dashboard__dashboard_api_zones/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.dashboard_api_zones;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Summary {
}

message Zonesitem {
}

message Apizonessummary {

  message Summary {
  }

  repeated Zonesitem zones = 1;
  Summary summary = 2;
}

message Apizone {

  string name = 1;
  string title = 2;
  string description = 3;
  int64 app_count = 4;
  int64 endpoint_count = 5;
  string status = 6;
  string schema_url = 7;
  string api_url = 8;
  repeated string apps = 9;
}