// health/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.health;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Healthcheck {

  string status = 1;
  string wrapper_url = 2;
  bool has_api_key = 3;
  string timestamp = 4;
}

message Quickhealth {

  string status = 1;
  google.protobuf.Timestamp timestamp = 2;
  optional string error = 3;
}