// api__crypto/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package crypto.v1.crypto;

import "google/protobuf/timestamp.proto";


message Resultsitem {
}

message Paginatedcoinlistlist {

  int64 count = 1;
  int64 page = 2;
  int64 pages = 3;
  int64 page_size = 4;
  bool has_next = 5;
  bool has_previous = 6;
  optional int64 next_page = 7;
  optional int64 previous_page = 8;
  repeated Resultsitem results = 9;
}

message Coinlist {

  int64 id = 1;
  string symbol = 2;
  string name = 3;
  string slug = 4;
  optional string current_price_usd = 5;
  optional string market_cap_usd = 6;
  optional string price_change_24h_percent = 7;
  optional string logo_url = 8;
  optional int64 rank = 9;
  bool is_price_up_24h = 10;
}

message Coin {

  int64 id = 1;
  string symbol = 2;
  string name = 3;
  string slug = 4;
  optional string current_price_usd = 5;
  optional string market_cap_usd = 6;
  optional string volume_24h_usd = 7;
  optional string price_change_24h_percent = 8;
  optional string price_change_7d_percent = 9;
  optional string price_change_30d_percent = 10;
  optional string logo_url = 11;
  optional string description = 12;
  optional string website = 13;
  optional string whitepaper_url = 14;
  optional int64 rank = 15;
  optional bool is_active = 16;
  optional bool is_tradeable = 17;
  bool is_price_up_24h = 18;
  google.protobuf.Timestamp created_at = 19;
  google.protobuf.Timestamp updated_at = 20;
}

message TrendingCoinsitem {
}

message Coinstats {

  int64 total_coins = 1;
  string total_market_cap_usd = 2;
  string total_volume_24h_usd = 3;
  repeated TrendingCoinsitem trending_coins = 4;
}

message Paginatedexchangelist {

  int64 count = 1;
  int64 page = 2;
  int64 pages = 3;
  int64 page_size = 4;
  bool has_next = 5;
  bool has_previous = 6;
  optional int64 next_page = 7;
  optional int64 previous_page = 8;
  repeated Resultsitem results = 9;
}

message Exchange {

  int64 id = 1;
  string name = 2;
  string slug = 3;
  string code = 4;
  optional string description = 5;
  optional string website = 6;
  optional string logo_url = 7;
  optional string volume_24h_usd = 8;
  optional int64 num_markets = 9;
  optional int64 num_coins = 10;
  optional string maker_fee_percent = 11;
  optional string taker_fee_percent = 12;
  optional bool is_active = 13;
  optional bool is_verified = 14;
  optional bool supports_api = 15;
  optional int64 rank = 16;
  google.protobuf.Timestamp created_at = 17;
  google.protobuf.Timestamp updated_at = 18;
}

message Paginatedwalletlist {

  int64 count = 1;
  int64 page = 2;
  int64 pages = 3;
  int64 page_size = 4;
  bool has_next = 5;
  bool has_previous = 6;
  optional int64 next_page = 7;
  optional int64 previous_page = 8;
  repeated Resultsitem results = 9;
}

message CoinInfo {
}

message Wallet {

  message CoinInfo {
  }

  int64 id = 1;
  int64 user = 2;
  int64 coin = 3;
  CoinInfo coin_info = 4;
  optional string balance = 5;
  string locked_balance = 6;
  string total_balance = 7;
  string value_usd = 8;
  optional string address = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}